# room-reservation

./: .gitignore  Cargo.toml  README.md  test.http
src/: config.rs  domain.rs  error.rs  lib.rs  main.rs  repository.rs  test.rs
src/app/: build.rs  mod.rs  state.rs  status_test.rs
src/dto/: mod.rs  user_dto.rs
src/error/: domain.rs  http.rs  mod.rs  service.rs
src/features/: mod.rs
src/features/book/: dto.rs  handlers.rs  repo.rs  routes.rs  service.rs
src/features/booking/: dto.rs  handlers.rs  mod.rs  repo.rs  routes.rs  service.rs
src/features/room/: dto.rs  handlers.rs  repo.rs  routes.rs  service.rs
src/features/user/: dto.rs  handlers.rs  mod.rs  repo.rs  routes.rs  service.rs
src/handlers/: user_handlers.rs
src/infra/: cache.rs  db.rs  in_memo_repo.rs  mod.rs  reg_repo.rs  reg_service.rs  room_repo.rs  room_service.rs  user_repo.rs  user_service.rs
src/infra/in_memory/: in_memo_repo.rs  mod.rs  room_repo.rs  user_repo.rs
src/routes/: user_routes.rs
src/tests/: in_memo_repo_test.rs  mod.rs  reg_service_test.rs  room_service_test.rs  test_helpers.rs  user_service_test.rs
unused_files/: repository.rs
unused_files/tests/: in_memo_repo_test.rs  in_memory_repo.rs  mod.rs  reg_service_test.rs  room_service_test.rs  test_helpers.rs  user_service_test.rs
