[package]
name = "room_reservations"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version ="1.16", features = ["v4"]}
chrono ="0.4"

# API dependencies 
axum ={ version = "0.8", features = ["json"]}
serde ={ version = "1", features = ["derive"]}
serde_json ="1"
tokio ={ version = "1", features = ["full"]}
tower ="0.5"
tower-http ={ version = "0.6", features = ["trace", "cors"]}
